# Miner

./: CLAUDE.md  README.md  SETUP.md  config.example.toml
cpu/: .gitignore  Cargo.toml
cpu/src/: config.rs  merkle.rs  mining.rs  rpc.rs  template.rs
docs/: hashrates.md  mainnet.md  regtest.md  setup.md  testnet4.md
docs/banchmarks/: notes.md  pc1.md  pc2.md
docs/banchmarks/PC1/: log.txt  specs.txt
gpu/: Cargo.toml  README.md  config.example.toml
gpu/kernels/: sha256d.cu
gpu/src/: config.rs  gpu.rs  main.rs  mining.rs  sha256_host.rs
src/: coinbase.rs  main.rs
