[package]
name = "btc-lottery-miner"
version = "0.1.0"
edition = "2021"
authors = ["Marcelo Wzorek Filho"]
description = "Solo CPU Bitcoin miner — lottery edition"
license = "MIT"

[[bin]]
name = "btc-lottery-miner"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
hex = "0.4"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
num_cpus = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
ctrlc = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
